# skyloft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
apps/: CMakeLists.txt  bench.c  bench_app_switch.c  bench_common.h  bench_pthread.c  fakework.c  hello.c  hello_shim.c  test_net.c  test_rcu.c  test_timer.c
apps/dpdk_netperf/: .gitignore  Makefile  README.md  dpdk_netperf.c
apps/rocksdb_server/: .gitignore  Makefile  create_db.cc  rocksdb_server.c
docs/: sosp24-ae.md
docs/imgs/: overview.drawio  uintr.drawio
include/net/: arp.h  cksum.h  ethernet.h  icmp.h  ip.h  mbuf.h  ping.h  tcp.h  udp.h
include/skyloft/: global.h  io.h  mm.h  net.h  percpu.h  platform.h  sched.h  stat.h  sync.h  task.h  tcp.h  udp.h
include/skyloft/mm/: mempool.h  page.h  slab.h  smalloc.h  stack.h  tcache.h
include/skyloft/sched/: ops.h  utimer.h
include/skyloft/sched/policy/: cfs.h  dummy.h  eevdf.h  fifo.h  rr.h  (+2 more)
include/skyloft/sync/: rcu.h  rculist.h  signal.h  sync.h  timer.h
include/skyloft/uapi/: dev.h  pthread.h  task.h
kmod/: Makefile  main.c
libos/: CMakeLists.txt  exit.c  libos.c  libos.ld  percpu.c  stat.c
libos/io/: cmd.c  completion.c  dpdk.c  main.c  rx.c  tx.c
libos/mm/: mempool.c  page.c  slab.c  smalloc.c  stack.c  tcache.c
libos/net/: arp.c  core.c  dump.c  icmp.c  mbuf.c  ping.c  tcp.c  tcp.h  tcp_in.c  tcp_out.c  transport.c  udp.c  waitq.h
libos/platform/: cpu.c  dev.c  mem.c  mod.c  uintr.c
libos/sched/: sched.c  softirq.c  switch.S  task.c  utimer.c
libos/sched/policy/: cfs.c  eevdf.c  fifo.c  rr.c  sq.c  sq_lcbe.c
libos/shim/: entry.c  hook.h  pthread.c
libos/sync/: rcu.c  signal.c  sync.c  timer.c
microbench/: .gitignore  Makefile  common.h  fxsave.c  kipi_send_recv.c  setitimer_recv.c  signal_delivery.c  signal_send_recv.c  thread.c  uipi_delivery.c  uipi_send_recv.c  utimer_recv.c
paper_results/memcached/USR/: shenango  skyloft
paper_results/rocksdb/50-get-50-scan/: shenango  skyloft_100us  skyloft_10us  skyloft_20us  skyloft_5us  skyloft_5us_utimer  skyloft_nopre
paper_results/schbench/linux_cfs/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/linux_cfs_opt/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/linux_eevdf/: 16.txt  24.txt  256.txt  32.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/linux_fifo/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  64.txt  72.txt  8.txt  80.txt  96.txt  all.csv
paper_results/schbench/linux_rr/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/skyloft_cfs50us/: 16.txt  24.txt  32.txt  4.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/skyloft_eevdf/: 16.txt  24.txt  32.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/schbench/skyloft_fifo/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  64.txt  72.txt  8.txt  80.txt  96.txt  all.csv
paper_results/schbench/skyloft_rr1ms/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  32.txt  4.txt  40.txt  48.txt  64.txt  72.txt  8.txt  80.txt  96.txt  all.csv
paper_results/schbench/skyloft_rr200us/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  64.txt  72.txt  8.txt  80.txt  96.txt  all.csv
paper_results/schbench/skyloft_rr50us/: 112.txt  128.txt  144.txt  16.txt  160.txt  176.txt  192.txt  208.txt  224.txt  24.txt  240.txt  256.txt  32.txt  4.txt  40.txt  48.txt  56.txt  64.txt  72.txt  8.txt  80.txt  88.txt  96.txt  all.csv
paper_results/synthetic/99.5-4-0.5-10000/: ghost-100us  ghost-10us  ghost-20us  ghost-30us  shinjuku-10us  shinjuku-30us  shinjuku-5us  skyloft-10us  skyloft-20us  skyloft-30us  skyloft-inf
paper_results/synthetic/99.5-4-0.5-10000-lcbe/: cfs-be  cfs-lc  ghost-20us-be  ghost-20us-lc  ghost-30us-be  ghost-30us-lc  shinjuku-30us-be  shinjuku-30us-lc  skyloft-20us-be  skyloft-20us-lc  skyloft-30us-be  skyloft-30us-lc
scripts/: build.sh  debug.sh  disable_cpufreq_scaling.sh  install_deps.sh  make_rootfs.sh  run.sh  run_experiments.sh  run_shinjuku.sh  run_synthetic_lc.sh  run_synthetic_lcbe.sh  setup_host.sh
scripts/bench/: schbench.sh
scripts/cmake/: rocksdb.mk
scripts/params/: default.params  memcached.params  microbench.params  rocksdb-server-10us.params  rocksdb-server-20us.params  rocksdb-server-5us-utimer.params  rocksdb-server-5us.params  rocksdb-server.params  schbench-cfs-50us.params  schbench-eevdf.params  schbench-rr-1ms.params  schbench-rr-200us.params  schbench-rr-50us.params  schbench-rr.params  shinjuku.params
scripts/plots/: common.py  plot_memcached.py  plot_rocksdb_server.py  plot_schbench.py  plot_schbench2.py  plot_synthetic.py  requirements.txt
synthetic/: CMakeLists.txt
synthetic/antagonist/: main.cc
synthetic/rocksdb/: common.cc  common.h  jbsq.h  native.cc  random.cc  random.h  shinjuku.cc  shinjuku_old.cc
utils/: CMakeLists.txt  bitmap.c  list.c  log.c  lrpc.c  rbtree.c
utils/include/utils/: assert.h  atomic.h  bitmap.h  byteorder.h  cksum.h  compiler.h  cpu.h  defs.h  fxsave.h  gen.h  hash.h  init.h  kref.h  list.h  log.h  lrpc.h  minmax.h  msgq.h  ops.h  queue.h  rbtree.h  shm.h  spinlock.h  syscalls.h  time.h  types.h  uintr.h
